# ros2_ws_training2.bis

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/grasping_controller/share/grasping_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/isaacsim_rviz_training/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: isaacsim_rviz_training
install/isaacsim_rviz_training/share/ament_index/resource_index/package_run_dependencies/: isaacsim_rviz_training
install/isaacsim_rviz_training/share/ament_index/resource_index/parent_prefix_path/: isaacsim_rviz_training
install/isaacsim_rviz_training/share/isaacsim_rviz_training/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/isaacsim_rviz_training/share/isaacsim_rviz_training/bringup/config/: example.rviz
install/isaacsim_rviz_training/share/isaacsim_rviz_training/bringup/launch/: command_slrobot.launch.py
install/isaacsim_rviz_training/share/isaacsim_rviz_training/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  isaacsim_rviz_trainingConfig.cmake  isaacsim_rviz_trainingExport-noconfig.cmake  isaacsim_rviz_trainingExport.cmake
install/isaacsim_rviz_training/share/isaacsim_rviz_training/controller/helper_functions/: load_ros_parameters.py
install/isaacsim_rviz_training/share/isaacsim_rviz_training/description/meshes/: CAMERA.dae  LIDAR.dae  RADICART_FULL_PARTS.dae
install/isaacsim_rviz_training/share/isaacsim_rviz_training/description/ros2_control/: ros2_control.xacro
install/isaacsim_rviz_training/share/isaacsim_rviz_training/description/stp/: part.stp  part3.usd
install/isaacsim_rviz_training/share/isaacsim_rviz_training/description/urdf/: camera.xacro  lidar.xacro  spacelab_robot.urdf
install/isaacsim_rviz_training/share/isaacsim_rviz_training/description/usd/: spacelab_robot_without_mimic.usd  spacelab_scene.usd
install/isaacsim_rviz_training/share/isaacsim_rviz_training/launch/: gripper_close.launch.py  gripper_open.launch.py  init_rviz.launch.py  pick_far_position.launch.py  place_far_position.launch.py  publish_urdf.launch.py  rest_position.launch.py  sl_robot.launch.py  spawn_robot_description.launch.py  test.launch.py
install/isaacsim_rviz_training/share/isaacsim_rviz_training/models/meshes/: END_EFFECTOR.dae  RADICART_FULL.dae  Wrist1.dae
install/isaacsim_rviz_training/share/isaacsim_rviz_training/models/stp/: part.usd  parts_square.stp  parts_square.usd
install/isaacsim_rviz_training/share/isaacsim_rviz_training/models/urdf/: gripper.xacro  inertial_macros.xacro  robot_core.xacro  robot_gazebo.xacro  ros2_control.xacro  spacelab_robot.urdf  spacelab_robot.urdf.xacro
install/isaacsim_rviz_training/share/isaacsim_rviz_training/models/usd/: default_environment.usd  spacelab_scene.usd
install/isaacsim_rviz_training/share/isaacsim_rviz_training/scripts/: Command_robot.py  import_3D_1.py  import_3D_2.py  isaac_sim_urdf_import.py  sl_robot_isaac_ros2.py
log/: latest_build
src/custom_armbot_hardware/: CMakeLists.txt  custom_armbot_hardware.xml  dof6bot_hardware_interface.xml  package.xml
src/custom_armbot_hardware/include/custom_armbot_hardware/: dof6bot_hardware.hpp  dof6bot_hardware_interface.hpp
src/custom_armbot_hardware/src/: dof6bot_hardware.cpp  dof6bot_hardware_interface.cpp
src/grasping_controller/: package.xml  setup.cfg  setup.py
src/grasping_controller/config/: Grasp_PART.yaml  Grasp_PART_clone.yaml  Grasp_template.yaml
src/grasping_controller/grasping_controller/: grasping_controller.py
src/isaacsim_rviz_training/: CMakeLists.txt  isaacsim_rviz_training.xml  package.xml
src/isaacsim_rviz_training/bringup/config/: example.rviz  slrobot_ros_params.yaml
src/isaacsim_rviz_training/bringup/launch/: command_slrobot.launch.py  slrobot.launch.py
src/isaacsim_rviz_training/config/: my_controllers.yaml  slrobot_ros_params.yaml
src/isaacsim_rviz_training/controller/: command_slrobot.py  controlMsg2jointMsg_pubSub.py
src/isaacsim_rviz_training/controller/helper_functions/: load_ros_parameters.py
src/isaacsim_rviz_training/description/meshes/: Forearm.dae  LIDAR_STRUCTURE.dae  RADICART_FULL_STRUCTURE.dae  ROBOT_STRUCTURE.dae  STORAGE.dae  Shoulder.dae  Wrist3.dae
src/isaacsim_rviz_training/description/ros2_control/: ros2_control.xacro  ros2_control_test_two_hw_component.xacro
src/isaacsim_rviz_training/description/stp/: part2.stp  part2.usd  part4.stp  part4.usd
src/isaacsim_rviz_training/description/urdf/: camera.xacro  gripper.xacro  lidar.xacro  robot_core.xacro  spacelab_robot.urdf  spacelab_robot.urdf.xacro  spacelab_robot_test mimic.urdf  spacelab_robot_test.urdf  test.urdf
src/isaacsim_rviz_training/description/urdf/spacelab_robot/: spacelab_robot.usd
src/isaacsim_rviz_training/description/usd/: spacelab_scene2.usd  spacelab_scene_robot.usd
src/isaacsim_rviz_training/hardware/: dof6bot_hardware_interface.cpp
src/isaacsim_rviz_training/hardware/include/isaacsim_rviz_training/: dof6bot_hardware_interface.hpp
src/isaacsim_rviz_training/isaacsim/: isaac_sim_node.py
src/isaacsim_rviz_training/launch/: init1_position.launch.py  init2_position.launch.py  pick_position.launch.py  place_position.launch.py  sl_robot.launch.py  slrobot.launch.py  spawn_robot_ros2.launch.xml  start_world.launch.py
src/isaacsim_rviz_training/models/meshes/: PART.dae  UpperArm.dae  WORKBENCH.dae  Wrist2.dae
src/isaacsim_rviz_training/models/stp/: part3.stp  workbenches.stp  workbenches.usd
src/isaacsim_rviz_training/models/urdf/: gripper.xacro  lidar.xacro  ros2_control.xacro  spacelab_robot.urdf  spacelab_robot.urdf.xacro  spacelab_robot_test.urdf
src/isaacsim_rviz_training/models/usd/: spacelab_scene.usd
src/isaacsim_rviz_training/scripts/: Command_gripper.py  Listen_Command_robot_example.py  command_slrobot.py  isaac_sim_node.py  isaac_sim_urdf_import.py  sl_robot_isaac_ros2.py
